# CppFirmwareEmbedded

./: CMakeLists.txt  README.md
attenuation/: AD9361RxAttenuator.cpp  AD9361RxAttenuator.hpp  AttenuatorBase.hpp  CMakeLists.txt  Error.hpp  FixedAttenuator.cpp  FixedAttenuator.hpp  IAttenuator.hpp  PE4312.cpp  PE4312.hpp  main.cpp
docs/: Serial (UART).md
experiments/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  RingBufferSegmented.cpp  main.cpp  tools.hpp
uart/: CMakeLists.txt  SerialPortReader.cpp  experiments.cpp  main.cpp  uart.hpp
